--- a/Calculadora.html
+++ b/Calculadora.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <link rel="stylesheet" type="text/css" href="calc.css" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CALCULADORA</title>
+  
 </head>
 <body background="powerrosa.jpg">
+  
 
   <span>Calculadora Power Ranger</span>
   <form>
@@ -33,43 +36,6 @@
       </tr>
     </table>
   </form>
-  <script>
-
-    function somar() {
-
-      const primeiroNumero = document.getElementById("primeiroNumero");
-      const segundoNumero = document.getElementById("segundoNumero");
-
-      document.getElementById("resultado").value = 
-      Number(primeiroNumero.value) 
-      + 
-      Number(segundoNumero.value);
-
-      primeiroNumero.value="";
-      segundoNumero.value="";
-    }
-
-    function subtrair() {
-      document.getElementById("resultado").value = Number(document.getElementById("primeiroNumero").value) - Number(document.getElementById("segundoNumero").value);
-
-      document.getElementById("primeiroNumero").value="";
-      document.getElementById("segundoNumero").value="";
-    }
-
-    function multiplicar() {
-      document.getElementById("resultado").value = Number(document.getElementById("primeiroNumero").value) * Number(document.getElementById("segundoNumero").value);
-
-      document.getElementById("primeiroNumero").value="";
-      document.getElementById("segundoNumero").value="";
-    }
-
-    function dividir() {
-      document.getElementById("resultado").value = Number(document.getElementById("primeiroNumero").value) / Number(document.getElementById("segundoNumero").value);
-      
-      document.getElementById("primeiroNumero").value="";
-      document.getElementById("segundoNumero").value="";
-    }
-
-  </script>
+ <script src="sitecalc.js"></script>
 </body>
 </html>
